RESOLVED FIXED58612
Crash switching overlay/non-overlay scrollbar preference (WebCore::Page::setNeedsRecalcStyleInAllFrames + 9)
https://bugs.webkit.org/show_bug.cgi?id=58612
Summary Crash switching overlay/non-overlay scrollbar preference (WebCore::Page::setN...
Beth Dakin
Reported 2011-04-14 17:32:00 PDT
Top of the stack: 3 com.apple.WebCore: WebCore::Page::setNeedsRecalcStyleInAllFrames + 9 <== 3 com.apple.WebCore: -[ScrollbarPainterControllerDelegate scrollerImpPair:updateScrollerStyleForNewRecommendedScrollerStyle:] + 413 I haven't been able to reproduce the crash, but I have a speculative fix. <rdar://problem/9241920>
Attachments
Speculative fix (1.30 KB, patch)
2011-04-14 17:35 PDT, Beth Dakin
adele: review+
Beth Dakin
Comment 1 2011-04-14 17:35:16 PDT
Created attachment 89700 [details] Speculative fix
Beth Dakin
Comment 2 2011-04-14 22:05:26 PDT
Thanks Adele! Checked in with revision 83943.
Note You need to log in before you can comment on or make changes to this bug.