https://bugs.webkit.org/show_bug.cgi?id=58612 Crash switching overlay/non-overlay scrollbar preference (WebCore::Page::setNeedsRecalcStyleInAllFrames + 9) -and corresponding- <rdar://problem/9241920>

Reviewed by Adele Peterson.

Speculative fix: Page could definitely be null here. 
* page/FrameView.cpp:
(WebCore::FrameView::scrollbarStyleChanged):



git-svn-id: svn://svn.chromium.org/blink/trunk@83943 bbb929c8-8fbe-4397-9dbb-9b2b20218538